fixing bug 2 on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ z-index: 0;
 
   video::-webkit-media-controls-start-playback-button {
     display: none !important;
+    -webkit-appearance: none;
   }
 
 
